@@ -320,12 +320,20 @@ If you need more information on the install process, see
 <para>
 
 If you successfully managed an installation with &d-i;,
-please take time to provide us with a report. There is a template
+please take time to provide us with a report.
+<phrase condition="sarge">
+There is a template
 named <filename>install-report.template</filename> in the
 <filename>/root</filename> directory of a freshly
 installed system. Please fill it out and file it as a bug against the
 package <classname>installation-reports</classname>, as explained in
 <xref linkend="submit-bug" />.
+</phrase>
+<phrase condition="etch">
+The simplest way to do so is to install the reportbug package
+(<command>apt-get install reportbug</command>), and run
+<command>reportbug installation-report</command>.
+</phrase>
 
 </para><para>
 
