@@ -1,8 +1,12 @@
 installation-guide (20051026) UNRELEASED; urgency=low
 
+  [ Frans Pop ]
   * Fix build error caused by description for s390. Closes: #337382.
 
- -- Frans Pop <fjp@debian.org>  Fri,  4 Nov 2005 11:54:24 +0100
+  [ Joey Hess ]
+  * Update installation report template and instructions for etch.
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 18 Nov 2005 16:35:00 -0500
 
 installation-guide (20051025) unstable; urgency=low
 
